# qr_auto

./: .gitignore  Dockerfile  README.md  pyproject.toml
finance_trade/: __init__.py  api.py  config.py  exceptions.py  gunicorn.conf.py  models.py  project.py  utils.py
finance_trade/auth_controller/: view.py
finance_trade/auth_controller/shemes/: request_schemes.py  response_schemes.py
finance_trade/error_handlers/: auth_error_handler.py
finance_trade/services/: auth_service.py  core.py  user_service.py
