[tool.poetry]
name = "finance-trade"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
marshmallow = "^3.20.1"
binance-connector-python = "^0.6.0"
sentry-sdk = "^1.39.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
